# winfw-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
examples/: add_new_rule.rs  del_rule.rs  disable_rule.rs  enable_rule.rs  list_all_rules.rs
src/: bindings.cpp  cfw.rs  consts.rs  error.rs  lib.rs  utils.rs
